--- a/crates/forecasting/Cargo.toml
+++ b/crates/forecasting/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2024"
 
 [dependencies]
 egui = { workspace = true }
-eframe = { workspace = true }
 egui_plot = { workspace = true }
+common = { workspace = true }
