--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,10 +23,14 @@ jobs:
         uses: Swatinem/rust-cache@v2
       - name: Download and install Trunk binary
         run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
-      - name: Build
+      - name: Build tool
         run: cd ./crates/tool ; ../../trunk build --release --public-url $public_url --dist ../../gh-pages/tool
         env:
           public_url: "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/tool"
+      - name: Build forecasting
+        run: cd ./crates/forecasting ; ../../trunk build --release --public-url $public_url --dist ../../gh-pages/forecasting
+        env:
+          public_url: "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/forecasting"
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
