--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2024"
 [dependencies]
 egui = { workspace = true }
 eframe = { workspace = true }
+futures = { workspace = true }
+ron = { workspace = true }
+serde = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = { workspace = true }
