--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,4 +36,4 @@ zip-extract = { version = "0.2.1", default-features = false}
 clipboard = "0.5.0"
 futures = "0.3.31"
 ron = "0.10.1"
-three-d = { git = "https://github.com/asny/three-d.git" }
+three-d = { git = "https://github.com/asny/three-d.git", features = ["egui-gui"] }
