--- a/crates/sketch3/Cargo.toml
+++ b/crates/sketch3/Cargo.toml
@@ -7,3 +7,13 @@ edition = "2024"
 egui = { workspace = true }
 common = { workspace = true }
 three-d = { workspace = true }
+three-d-asset = { workspace = true }
+csv = { workspace = true }
+serde = { workspace = true }
+serde_repr =  { workspace = true }
+serde_json = { workspace = true }
+zip = { workspace = true }
+weldr = { workspace = true }
+glam = { workspace = true }
+ordered-float = { workspace = true }
+bytemuck = { workspace = true }
