--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ web-sys = "0.3.70"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.140"
 serde_yaml = "0.9.34"
+serde_repr = "0.1.20"
 chrono = { version = "0.4.37", features = ["serde", "now"] }
 walkdir = "2.5.0"
 anyhow = "1.0.92"
@@ -37,3 +38,9 @@ clipboard = "0.5.0"
 futures = "0.3.31"
 ron = "0.10.1"
 three-d = { git = "https://github.com/asny/three-d.git", features = ["egui-gui"] }
+three-d-asset = { version = "0.9.2", features = ["gltf"] }
+csv = "1.3.1"
+weldr ={ git = "https://github.com/djeedai/weldr" } 
+glam = "0.30.3"
+ordered-float = "5.0.0"
+bytemuck = "1.23.0"
